--- a/intro.html
+++ b/intro.html
@@ -1,6 +1,9 @@
 <html>
   <body>
-    <head> "Hello world.This is my first coding language."
+    <head> 
+      <title> 
+        "Hello world.This is my first coding language."
+      </title>
     </head>
     <p1> I am Amitesh Sahu.</p1>
   </body>
