--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
   <body>
     <head> 
       <title> 
-        "Hello world.This is my first coding language."
+        "My webpage"
       </title>
     </head>
-    <p1> I am Amitesh Sahu.</p1>
+    <h1>I am Amitesh Sahu.</h1>
+    <h2> This is my first coding language.</h2>
   </body>
 </html>
       
